--- a/README
+++ b/README
@@ -1,19 +1,10 @@
-Installation Instructions
-=========================
 
-Installing gtkparasite is pretty simple.
+sudo apt-get install gtksourceview-3.0
 
-Before you begin, make sure you have the GTK+ development headers installed.
-You can find this on your package management tool.
+./configure01_bl.sh --prefix=ignore/portable 
 
-We also recommend the Python development headers.
+make
+./gtkinspector.sh glade
 
-If you're using GTK 3, then instead run:
 
-    $ ./autogen.sh --with-gtk=3.0
-
-Then run:
-
-    $ make
-    $ sudo make install
-
+sudo apt-get remove gtksourceview-3.0
